Fixed sets.conf to use updated repo_name

--- a/sets.conf
+++ b/sets.conf
@@ -1,4 +1,4 @@
-[local sets]
+[doobry sets]
 class = portage.sets.files.StaticFileSet
 multiset = true
-directory = ${repository:local}/sets/
+directory = ${repository:doobry}/sets/
