--- a/www-servers/nginx/files/nginx.conf
+++ b/www-servers/nginx/files/nginx.conf
@@ -12,8 +12,8 @@ http {
 	log_format main
 		'$remote_addr - $remote_user [$time_local] '
         	'"$request" $status $bytes_sent '
-		'"$http_referer" "$http_user_agent" '
-		'"$gzip_ratio"';
+		'"$http_referer" "$http_user_agent"';
+#		' "$gzip_ratio"';
 
 	include				/etc/nginx/mime.types;
 	default_type			application/octet-stream;
